# reproduction_rules_python_1_7

./: MODULE.bazel  README.md
sub/: BUILD  MODULE.bazel  absl_app_smoke_binary.py  repro.sh
